--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -1,7 +1,7 @@
 @charset 'utf-8';
 
 // Helpers Styles
-@import "helpers/_mixins";
+// @import "helpers/_mixins";
 @import "helpers/_variables";
 
 // Base Styles
