--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -336,6 +336,9 @@ textarea {
 /* =============
     Header
 ============= */
+header {
+  font-size: rem-calc(20); }
+
 /* =============
     Footer
 ============= */
