--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -2,4 +2,12 @@
     Base
 ============= */
 
+.css-grid-global{
+    display: grid;
+    grid-template-columns: 16px auto 16px;
+    grid-template-areas: ". header .";
 
+    >div{
+        grid-area: header;
+    }
+}
