added some color and validated html

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -350,6 +350,9 @@ header {
 /* =============
     Footer
 ============= */
+footer {
+  background-color: #05404F; }
+
 /* =============
     Heroes
 ============= */
