--- a/dev/scss/sections/_news.scss
+++ b/dev/scss/sections/_news.scss
@@ -1,7 +1,14 @@
 /* =============
     Heroes
 ============= */
-
-li{
-    list-style-type: none;
+.cards{
+    ul{
+        padding-left: 0%;
+        li{
+            list-style-type: none;
+            img{
+                width: 100%;
+            }
+        }
+    }
 }
