--- a/dev/scss/sections/_heroes.scss
+++ b/dev/scss/sections/_heroes.scss
@@ -1,13 +1,19 @@
 /* =============
     Heroes
 ============= */
-    .heroes{
-        img{
-            width: 100%;
-        }
-        
-            li{
-                list-style-type: none;
-            }
-        
+.heroes {
+    img {
+        width: 100%;
     }
+
+    ul {
+        padding-left: 0%;
+
+        li {
+            list-style-type: none;
+            padding-left: 0%;
+        }
+    }
+
+
+}
