--- a/dev/scss/sections/_heroes.scss
+++ b/dev/scss/sections/_heroes.scss
@@ -14,6 +14,12 @@
             padding-left: 0%;
         }
     }
+   
 
+}
 
+section{
+    @include md {
+        background-color: red;
+    }
 }
