--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -3,6 +3,7 @@
 // Helpers Styles
 // @import "helpers/_mixins";
 @import "helpers/_variables";
+@import "helpers/_mixins";
 
 // Base Styles
 @import "base/_normalize";
