--- a/dev/scss/sections/_heroes.scss
+++ b/dev/scss/sections/_heroes.scss
@@ -13,11 +13,7 @@
             list-style-type: none;
             padding-left: 0%;
 
-            @include md{
-                float: left;
-                display: grid;
-                grid-template-columns: 50% 50%;
-            }
+            
         }
     }
 
@@ -33,6 +29,10 @@ section {
             @include md {
                 display: grid;
                 grid-template-columns: 40% auto;
+            }
+            @include lg {
+                display: grid;
+                grid-template-columns: 50% 50%;
             }
 
         }
