tried to do the footer

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -358,10 +358,18 @@ header {
 ============= */
 footer {
   background-color: #05404F; }
+  @media (min-width: 768px) {
+    footer div #locations {
+      float: left; } }
   footer div #locations section section {
     display: grid;
     grid-template-columns: 10% auto; }
-
+  @media (min-width: 768px) {
+    footer div #newsletter {
+      float: right; } }
+  @media (min-width: 768px) {
+    footer div #follow-us {
+      float: right; } }
 /* =============
     Heroes
 ============= */
