tried to fix hero 2, unsuccessful

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -378,6 +378,10 @@ footer {
 
 .heroes ul {
   padding-left: 0%; }
+  @media (min-width: 768px) {
+    .heroes ul {
+      grid-template-columns: 50% auto;
+      grid-template-rows: repeat(2); } }
   .heroes ul li {
     list-style-type: none;
     padding-left: 0%; }
@@ -407,7 +411,9 @@ footer {
     display: grid;
     grid-template-columns: 50% auto;
     grid-template-rows: repeat(3, 433px);
-    gap: 16px; } }
+    gap: 16px; }
+    #news ul img {
+      width: 360px; } }
 
 section div #upper-cards .circle-card {
   display: grid;
