--- a/dev/scss/sections/_news.scss
+++ b/dev/scss/sections/_news.scss
@@ -20,6 +20,10 @@
             grid-template-columns: 50% auto;
         grid-template-rows: repeat(3, 433px);
         gap: 16px;
+        img{
+            width: 360px;
+           
+        }
         }
     }
 }
