--- a/dev/scss/sections/_heroes.scss
+++ b/dev/scss/sections/_heroes.scss
@@ -9,6 +9,11 @@
     ul {
         padding-left: 0%;
 
+        @include md{
+            grid-template-columns: 50% auto;
+            grid-template-rows: repeat(2);
+        }
+
         li {
             list-style-type: none;
             padding-left: 0%;
