--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -520,9 +520,15 @@ footer {
   #news ul li img {
     width: 100%; }
 
-section div #upper-cards .circle-card {
-  display: grid;
-  grid-template-columns: 65% auto; }
+#hero-cards {
+  grid-template-columns: 0 auto 0; }
+  @media (min-width: 768px) {
+    #hero-cards {
+      grid-template-columns: 16px auto 16px; } }
+  #hero-cards div #upper-cards .circle-card {
+    display: grid;
+    grid-template-columns: 65% auto;
+    padding: 16px 16px 16px 16px; }
 
 #upper-cards {
   display: grid;
