--- a/dev/scss/sections/_circlecards.scss
+++ b/dev/scss/sections/_circlecards.scss
@@ -1,10 +1,16 @@
-section {
+#hero-cards {
+    grid-template-columns: 0 auto 0;
+
+    @include md{
+        grid-template-columns: 16px auto 16px;
+    }
     div {
         #upper-cards {
 
             .circle-card {
                 display: grid;
                 grid-template-columns: 65% auto;
+                padding: 16px 16px 16px 16px;
             }
 
         }
