--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -2,6 +2,12 @@
     Typography
 ============= */
 
+body{
+ font-family: 'M PLUS 1p', sans-serif;
+}
+
+
+
 h1,h2,h3,h4,h5{
     padding: 0;
     margin: 0;
